--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run tests
         run: script/cibuild
+      - name: Test terraform scripts
+        run: script/terraform_test
