Run Docker-compose in Github Actions
As well as adding the Github actions config, this also adds a simple `script/cibuild`
script to run the test script in Docker. I've had to make a couple of tweaks to get
our Docker config working properly in CI, namely removing the volumes from the
docker-compose.test.yml, and making sure `shellcheck` is intalled in the test layer.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,17 +6,13 @@ services:
       target: test
       args:
         RAILS_ENV: test
-    entrypoint: bundle exec rails db:prepare default
     depends_on:
       - db
     environment:
-      DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: 'true'
+      DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: "true"
       DATABASE_URL: postgres://postgres:password@db:5432/roda_test
     env_file:
       - .env.test
-    volumes:
-      - .:/app:cached
-      - .node_modules:/deps/node_modules:cached
   db:
     image: postgres
     volumes:
