Cache the Docker container
This uses Github actions' cache functionality to attempt to find a
cached version of the Docker container. If it does, it loads the cached
version, to cut down on build times. If there is no cached version
available (i.e. the Dockerfile has changed), it uploads the latest version
at the end of the test run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - id: cache-docker
+        uses: actions/cache@v2
+        with:
+          path: /tmp/docker-save
+          key: docker-save-${{ hashFiles('Dockerfile') }}
+      - name: Load cached Docker image
+        run: docker load -i /tmp/docker-save/snapshot.tar || true
+        if: steps.cache-docker.outputs.cache-hit == 'true'
       - name: Run tests
         run: script/cibuild
       - name: Test terraform scripts
         run: script/terraform_test
+      - name: Prepare Docker cache
+        run: mkdir -p /tmp/docker-save && docker save beis-report-official-development-assistance_test:latest -o /tmp/docker-save/snapshot.tar && ls -lh /tmp/docker-save
+        if: always() && steps.cache-docker.outputs.cache-hit != 'true'
