Add a ROBOT_NOINDEX environment variable
This is set to `true` for staging environments and `false` for production. I didn't
think it was worth setting as a secret in Github, because it's not one, so have just put it in plaintext in the deploy workflow, for clarity

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           TF_VAR_google_tag_manager_environment_preview: ${{ secrets.STAGING_GOOGLE_TAG_MANAGER_ENVIRONMENT_PREVIEW }}
           TF_VAR_custom_domain: ${{ secrets.STAGING_CUSTOM_DOMAIN }}
           TF_VAR_custom_hostname: ${{ secrets.STAGING_CUSTOM_HOSTNAME }}
+          TF_VAR_robot_noindex: "true"
         run: |
           script/deploy-terraform
         if: github.ref == 'refs/heads/develop'
@@ -68,6 +69,7 @@ jobs:
           TF_VAR_google_tag_manager_environment_preview: ${{ secrets.PROD_GOOGLE_TAG_MANAGER_ENVIRONMENT_PREVIEW }}
           TF_VAR_custom_domain: ${{ secrets.PROD_CUSTOM_DOMAIN }}
           TF_VAR_custom_hostname: ${{ secrets.PROD_CUSTOM_HOSTNAME }}
+          TF_VAR_robot_noindex: "false"
         run: |
           script/deploy-terraform
         if: github.ref == 'refs/heads/master'
