--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,6 @@ db/*.sqlite3
 /log/*
 /tmp/*
 
-
-
 # add /config/database.yml if it contains passwords
 # /config/database.yml
 
@@ -105,3 +103,6 @@ terraform/.terraform/*
 
 # CSV left in root
 /*.csv
+
+# SQL files
+**/*.sql
