Add the mailer action for an activated report

--- a/.env.test
+++ b/.env.test
@@ -13,3 +13,4 @@ SECRET_KEY_BASE=super secret
 AUTH0_CLIENT_ID=stand-in
 AUTH0_CLIENT_SECRET=stand-in
 AUTH0_DOMAIN=stand-in.local
+NOTIFY_VIEW_TEMPLATE=b541df04-add8-458e-a7d3-2e156386e150
