--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,4 @@ AUTH0_DOMAIN=
 # GOV.UK Notify for sending communications
 NOTIFY_KEY=
 NOTIFY_WELCOME_EMAIL_TEMPLATE=b1282182-887e-4c8a-8a39-649c9215cd41
+NOTIFY_VIEW_TEMPLATE=b541df04-add8-458e-a7d3-2e156386e150
