--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           TF_VAR_auth0_domain: ${{ secrets.STAGING_AUTH0_DOMAIN }}
           TF_VAR_notify_key: ${{ secrets.STAGING_NOTIFY_KEY }}
           TF_VAR_notify_welcome_email_template: ${{ secrets.STAGING_NOTIFY_WELCOME_EMAIL_TEMPLATE }}
+          TF_VAR_notify_view_template: "b541df04-add8-458e-a7d3-2e156386e150"
           TF_VAR_rollbar_access_token: ${{ secrets.ROLLBAR_ACCESS_TOKEN }}
           TF_VAR_skylight_access_token: ${{ secrets.SKYLIGHT_ACCESS_TOKEN }}
           TF_VAR_skylight_env: ${{ secrets.SKYLIGHT_ENV }}
@@ -60,6 +61,7 @@ jobs:
           TF_VAR_auth0_domain: ${{ secrets.PROD_AUTH0_DOMAIN }}
           TF_VAR_notify_key: ${{ secrets.PROD_NOTIFY_KEY }}
           TF_VAR_notify_welcome_email_template: ${{ secrets.PROD_NOTIFY_WELCOME_EMAIL_TEMPLATE }}
+          TF_VAR_notify_view_template: "b541df04-add8-458e-a7d3-2e156386e150"
           TF_VAR_rollbar_access_token: ${{ secrets.ROLLBAR_ACCESS_TOKEN }}
           TF_VAR_skylight_access_token: ${{ secrets.SKYLIGHT_ACCESS_TOKEN }}
           TF_VAR_skylight_env: ${{ secrets.SKYLIGHT_ENV }}
