--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ terraform/.terraform/*
 
 # debug
 .byebug_history
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
