--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beis-report-official-development-assistance",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "5.2.1",
     "accessible-autocomplete": "^2.0.2",
     "govuk-frontend": "^3.11.0"
   },
@@ -23,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/UKGovernmentBEIS/beis-report-official-development-assistance/issues"
   },
-  "homepage": "https://github.com/UKGovernmentBEIS/beis-report-official-development-assistance#readme"
+  "homepage": "https://github.com/UKGovernmentBEIS/beis-report-official-development-assistance#readme",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
+  }
 }
