--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "beis-report-official-development-assistance",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "5.2.1",
     "accessible-autocomplete": "^2.0.2",
-    "govuk-frontend": "^3.11.0"
+    "govuk-frontend": "^3.11.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.2.1"
   },
   "description": "## Getting started",
   "version": "1.0.0",
