Database seeds use Organisation#role
Update the seeds to reflect the recent change which removed the
`service_owner` column to allow mulitple organisation roles.

--- a/db/seeds/organisations.yml
+++ b/db/seeds/organisations.yml
@@ -2,39 +2,39 @@
   short_name: BEIS
   reference: GB-GOV-13
   type: 10
-  service_owner: true
+  role: service_owner
 - name: UK Space Agency
   short_name: UKSA
   reference: GB-GOV-EA31
   type: 10
-  service_owner: false
+  role: delivery_partner
 - name: Met Office
   short_name: MO
   reference: GB-GOV-EA46
   type: 10
-  service_owner: false
+  role: delivery_partner
 - name: British Council
   short_name: BC
   reference: GB-GOV-OT313
   type: 10
-  service_owner: false
+  role: delivery_partner
 - name: Academy of Medical Sciences
   short_name: AMS
   reference: GB-COH-03520281
   type: 22
-  service_owner: false
+  role: delivery_partner
 - name: Royal Society
   short_name: RS
   reference: GB-COH-RC000519
   type: 22
-  service_owner: false
+  role: delivery_partner
 - name: British Academy
   short_name: BA
   reference: GB-COH-RC000053
   type: 22
-  service_owner: false
+  role: delivery_partner
 - name: Royal Academy of Engineering
   short_name: RAE
   reference: GB-CHC-293074
   type: 22
-  service_owner: false
+  role: delivery_partner
