--- a/.github/workflows/trigger_rebase.yml
+++ b/.github/workflows/trigger_rebase.yml
@@ -36,7 +36,7 @@ jobs:
           fetch-depth: 0
           ref: ${{ env.ref }}
       - name: Automatic Rebase
-        uses: dxw/rebase@master
+        uses: cirrus-actions/rebase@1.5
         env:
           GITHUB_TOKEN: ${{ env.AUTO_REBASE_PERSONAL_ACCESS_TOKEN }}
           PR_NUMBER: ${{ matrix.pr_number }}
