Upgrade Ruby and JS dependencies
We also configure the test environment to not annotate the layout and
partials with the file name, we can only assume this was never working
as we have a test that now fails because of this.

It feels right that this is disabled in the test environment as it is
also disabled in production and we want parity between the two.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "beis-report-official-development-assistance",
   "private": true,
   "dependencies": {
-    "accessible-autocomplete": "^2.0.2",
-    "govuk-frontend": "^3.11.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1"
+    "@rails/webpacker": "^5.4.3",
+    "accessible-autocomplete": "^2.0.2",
+    "govuk-frontend": "^3.11.0"
   },
   "description": "## Getting started",
   "version": "1.0.0",
