--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "5.4.3",
     "accessible-autocomplete": "^2.0.2",
-    "govuk-frontend": "^3.11.0"
+    "govuk-frontend": "^3.11.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "description": "## Getting started",
   "version": "1.0.0",
@@ -27,6 +29,6 @@
   },
   "homepage": "https://github.com/UKGovernmentBEIS/beis-report-official-development-assistance#readme",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.3.0"
   }
 }
