--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -16,7 +16,7 @@ services:
     env_file:
       - .env.test
   db:
-    image: postgres
+    image: postgres:13
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
