Add helper class for AWS S3 config
We put the S3Upload's AWS config in a helper class with
some helpful error handling -- as we anticipate that the
rather complex JSON formatted `VCAP_SERVICES` env var from
Cloudfoundry may cause some difficulties in development and
in initial deployment via Terraform. For more info on
how S3 plays with GPass see:

https://docs.cloud.service.gov.uk/deploying_services/s3/#connect-to-an-s3-bucket-from-your-app

--- a/.env.test
+++ b/.env.test
@@ -14,3 +14,19 @@ AUTH0_CLIENT_ID=stand-in
 AUTH0_CLIENT_SECRET=stand-in
 AUTH0_DOMAIN=stand-in.local
 NOTIFY_VIEW_TEMPLATE=b541df04-add8-458e-a7d3-2e156386e150
+VCAP_SERVICES='{
+   "aws-s3-bucket":[
+      {
+         "label":"aws-s3-bucket",
+         "name":"export-uploads",
+         "instance_name":"export-uploads",
+         "credentials":{
+            "bucket_name":"paas-s3-broker-prod-lon-id",
+            "aws_access_key_id":"KEY_ID",
+            "aws_secret_access_key":"SECRET",
+            "aws_region":"eu-west-2",
+            "deploy_env":""
+         }
+      }
+   ]
+}'
