--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,20 @@ AUTH0_DOMAIN=
 NOTIFY_KEY=
 NOTIFY_WELCOME_EMAIL_TEMPLATE=b1282182-887e-4c8a-8a39-649c9215cd41
 NOTIFY_VIEW_TEMPLATE=b541df04-add8-458e-a7d3-2e156386e150
+
+VCAP_SERVICES='{
+   "aws-s3-bucket":[
+      {
+         "label":"aws-s3-bucket",
+         "name":"export-uploads",
+         "instance_name":"export-uploads",
+         "credentials":{
+            "bucket_name":"paas-s3-broker-prod-lon-id",
+            "aws_access_key_id":"KEY_ID",
+            "aws_secret_access_key":"SECRET",
+            "aws_region":"eu-west-2",
+            "deploy_env":""
+         }
+      }
+   ]
+}'
