--- a/.env.test
+++ b/.env.test
@@ -15,3 +15,4 @@ AUTH0_CLIENT_ID=stand-in
 AUTH0_CLIENT_SECRET=stand-in
 AUTH0_DOMAIN=stand-in.local
 NOTIFY_VIEW_TEMPLATE=b541df04-add8-458e-a7d3-2e156386e150
+NOTIFY_OTP_VERIFICATION_TEMPLATE=1a832f2e-b13b-47f0-b32a-9cd6672364d2
