Rename `delivery_partner` role
The values in the database are integers (thanks to the attributes being
`enum`s), so they don’t need a data migration.

Renaming the roles has to happen at the same time as renaming all the
methods, locale strings, partials etc. that use the role names instead
of their numeric values.

--- a/db/seeds/organisations.yml
+++ b/db/seeds/organisations.yml
@@ -7,34 +7,34 @@
   short_name: UKSA
   reference: GB-GOV-EA31
   type: 10
-  role: delivery_partner
+  role: partner_organisation
 - name: Met Office
   short_name: MO
   reference: GB-GOV-EA46
   type: 10
-  role: delivery_partner
+  role: partner_organisation
 - name: British Council
   short_name: BC
   reference: GB-GOV-OT313
   type: 10
-  role: delivery_partner
+  role: partner_organisation
 - name: Academy of Medical Sciences
   short_name: AMS
   reference: GB-COH-03520281
   type: 22
-  role: delivery_partner
+  role: partner_organisation
 - name: Royal Society
   short_name: RS
   reference: GB-COH-RC000519
   type: 22
-  role: delivery_partner
+  role: partner_organisation
 - name: British Academy
   short_name: BA
   reference: GB-COH-RC000053
   type: 22
-  role: delivery_partner
+  role: partner_organisation
 - name: Royal Academy of Engineering
   short_name: RAE
   reference: GB-CHC-293074
   type: 22
-  role: delivery_partner
+  role: partner_organisation
