--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - master
+      - main
       - develop
 
 env:
@@ -31,7 +31,7 @@ jobs:
   deploy_to_production:
     needs: build_and_push_to_dockerhub
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     env:
       TF_VAR_docker_image: ${{ needs.build_and_push_to_dockerhub.outputs.docker_tag }}
       TF_VAR_docker_username: ${{ secrets.DOCKER_USERNAME }}
@@ -85,7 +85,7 @@ jobs:
   deploy_to_training:
     needs: build_and_push_to_dockerhub
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     env:
       TF_VAR_docker_image: ${{ needs.build_and_push_to_dockerhub.outputs.docker_tag }}
       TF_VAR_docker_username: ${{ secrets.DOCKER_USERNAME }}
@@ -122,7 +122,7 @@ jobs:
             --errorOnFail
   ghost_inspector_prod:
     needs: deploy_to_production
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: execute Ghost Inspector test
@@ -133,7 +133,7 @@ jobs:
             --errorOnFail
   check_and_notify:
     needs: deploy_to_production
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
