--- a/config/activity_csv_columns.yml
+++ b/config/activity_csv_columns.yml
@@ -5,6 +5,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -14,6 +15,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -22,6 +24,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -33,6 +36,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -41,6 +45,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -49,6 +54,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -57,6 +63,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -65,6 +72,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -73,6 +81,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -81,6 +90,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -89,6 +99,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -97,6 +108,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -105,6 +117,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -113,6 +126,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -121,6 +135,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -129,6 +144,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -137,6 +153,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -145,6 +162,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -153,6 +171,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -161,6 +180,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -169,6 +189,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -177,6 +198,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -185,6 +207,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -193,6 +216,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -201,6 +225,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -209,6 +234,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -217,6 +243,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -225,6 +252,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -233,6 +261,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -241,6 +270,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -249,6 +279,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -257,6 +288,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -265,6 +297,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -273,6 +306,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -281,6 +315,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -289,6 +324,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -297,6 +333,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -305,6 +342,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -313,6 +351,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -321,6 +360,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -329,6 +369,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: false
@@ -337,6 +378,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
@@ -345,6 +387,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -353,6 +396,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: false
       level_c_d:
         non_ispf: false
@@ -361,6 +405,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: false
       level_c_d:
         non_ispf: false
@@ -370,6 +415,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: true
+        ispf_non_oda: true
         non_ispf: true
       level_c_d:
         non_ispf: true
@@ -379,6 +425,7 @@ columns:
     inclusion:
       level_b:
         ispf_oda: false
+        ispf_non_oda: false
         non_ispf: false
       level_c_d:
         non_ispf: true
