ISPF activities can have multiple ISPF themes
Support multiple ISPF themes being selected for an ISPF activity.

Importing multiple ISPF themes is following the same pattern as other
fields with multiple values: the codes can be entered as one string,
separated by the pipe character, `|`.

For example, to indicate that an activity relates to Net zero and
Tomorrow's technologies, the “ISPF themes” column in the CSV would
contain the value `1|3`.

--- a/config/activity_csv_columns.yml
+++ b/config/activity_csv_columns.yml
@@ -477,8 +477,8 @@ columns:
         ispf_oda: false
         ispf_non_oda: false
         non_ispf: true
-  ispf_theme:
-    heading: ISPF theme
+  ispf_themes:
+    heading: ISPF themes
     inclusion:
       level_b:
         ispf_oda: true
